--- a/osa9/excercises/package.json
+++ b/osa9/excercises/package.json
@@ -12,6 +12,7 @@
   "author": "Tuomo Ojaluoma",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.31",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
