--- a/osa9/excercises/package.json
+++ b/osa9/excercises/package.json
@@ -2,9 +2,11 @@
   "name": "excercises",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev index.ts",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExcercises": "ts-node excerciseCalculator.ts"
@@ -12,8 +14,13 @@
   "author": "Tuomo Ojaluoma",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
