--- a/osa9/excercises/package.json
+++ b/osa9/excercises/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExcercises": "ts-node excerciseCalculator.ts"
@@ -16,6 +17,9 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.16.0",
+    "@typescript-eslint/parser": "^4.16.0",
+    "eslint": "^7.21.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
